# inklink_backend

./: .env  Cargo.toml  README.md
migrations/: 20240301173232_init.up.sql  20240305142354_articles.down.sql  20240305142354_articles.up.sql
src/: db.rs  jwt.rs  main.rs  middleware.rs  models.rs
src/db/: article_table_helper.rs  mod.rs  user_table_helper.rs
src/routes/: article_routes.rs  mod.rs  user_routes.rs
